tex body finished

--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -10,28 +10,33 @@
 	\bibitem{invasive-plants}
 	https://www.sciencedaily.com/releases/2022/02/220210125820.htm
 	\bibitem{heracleum} https://cyberleninka.ru/article/n/borschevik-sosnovskogo-v-rossiyskoy-federatsii/viewer
-	\webbibitem{rivr}{https://ib.komisc.ru/add/rivr}{Официальный сайт проекта РИВР}{26.12.2021}
-	\webbibitem{esquire}{https://esquire.ru/articles/5849-cow-parsnip}{Статья в журнале Esquire, посвященная борщевику Cосновского}{12.01.2022}
+	\weblink*{rivr}{https://ib.komisc.ru/add/rivr}{Официальный сайт проекта РИВР}{26.12.2021}
+	\weblink*{esquire}{https://esquire.ru/articles/5849-cow-parsnip}{Статья в журнале Esquire, посвященная борщевику Cосновского}{12.01.2022}
 	
-	\webbibitem{googlemymaps}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
-	\webbibitem{inaturalist}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
-	\webbibitem{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
-	\webbibitem{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
+	\weblink*{inaturalist}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
+	\weblink*{googlemymaps}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
+	\weblink*{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
+	\weblink*{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
+	\weblink*{inaturalist-export}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
+	
+	
+	
+	\bibitem{privacy-policy} Федеральный закон от 27.07.2006 N 152-ФЗ (ред. от 02.07.2021) "О персональных данных", статья 9.1
 	
 	
 	
 	\bibitem{postgis-vs-mongo} Bartoszewski, Dominik \& Piórkowski, Adam \& Lupa, Michał. (2019). The Comparison of Processing Efficiency of Spatial Data for PostGIS and MongoDB Databases. 10.1007/978-3-030-19093-4\_22.
-	\webbibitem{flutter-vs-react}{https://dergipark.org.tr/en/download/article-file/1607441}{Сравнение
+	\weblink*{flutter-vs-react}{https://dergipark.org.tr/en/download/article-file/1607441}{Сравнение
 	популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
-	\webbibitem{flutter-better}{http://www.diva-portal.org/smash/get/diva2:1442804/FULLTEXT01.pdf}{Оценка производительности популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
-	\webbibitem{bloc-better}{https://flutterdevs.com/blog/bloc-pattern-in-flutter-part-1}{Описание архитектуры BLoC}{18.05.2022}
+	\weblink*{flutter-better}{http://www.diva-portal.org/smash/get/diva2:1442804/FULLTEXT01.pdf}{Оценка производительности популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
+	\weblink*{bloc-better}{https://flutterdevs.com/blog/bloc-pattern-in-flutter-part-1}{Описание архитектуры BLoC}{18.05.2022}
 	\bibitem{convolutional-better} Shamsaldin, Ahmed \& Fattah, Polla \& Rashid, Tarik \& Al-Salihi, Nawzad. (2019). The Study of The Convolutional Neural Networks Applications. UKH Journal of Science and Engineering. 3. 31-40. 10.25079/ukhjse.v3n2y2019.pp31-40.
 	\bibitem{tensorflow-better} Kiran, T. Tritva Jyothi, Computer Vision Accuracy Analysis with Deep Learning Model Using TensorFlow (JULY 22, 2020). International Journal of Innovative Research in Computer Science \& Technology (IJIRCST) ISSN: 2347-5552, Volume, 8, Issue, 4, July, 2020, Available at SSRN: \href{https://ssrn.com/abstract=3673214}{https://ssrn.com/abstract=3673214} or \href{http://dx.doi.org/10.2139/ssrn.3673214}{http://dx.doi.org/10.2139/ssrn.3673214} 
-	\webbibitem{xception-better}{https://arxiv.org/abs/1610.02357}{Описание модели XCeption свёрточной нейронной сети, обученной на наборе данных ImageNet}{18.05.2022}
+	\weblink*{xception-better}{https://arxiv.org/abs/1610.02357}{Описание модели XCeption свёрточной нейронной сети, обученной на наборе данных ImageNet}{18.05.2022}
 	
 	
 	
-	\webbibitem{un-biodiv}{https://www.cbd.int/convention/text/}{United Nations Convention on Biological Diversity (CBD)}{17.05.2022}
+	\weblink*{un-biodiv}{https://www.cbd.int/convention/text/}{United Nations Convention on Biological Diversity (CBD)}{17.05.2022}
 	\bibitem{poisonous-ivy}
 	nytimes.com/interactive/projects/cp/climate/2015-paris-climate-talks/what-climate-change-looks-like-poison-ivy
 	\bibitem{heracleum-desc} Виноградова В.М. Борщевик — Heracleum L. // Флора Восточной Европы. — М.; СПб.: Товарищество научных изданий КМК, 2004, Т. 11. – С. 404.
@@ -43,6 +48,7 @@
 	\bibitem{countryside-measures} "Земельный кодекс Российской Федерации" от 25.10.2001 N 136-ФЗ, статья 42 (ред. от 01.05.2022)
 	\bibitem{rural-fine} "Кодекс Российской Федерации об административных правонарушениях" от 30.12.2001 N 195-ФЗ (ред. от 16.04.2022) (с изм. и доп., вступ. в силу с 27.04.2022), статья 8.7
 	\bibitem{rural-law} Федеральный закон "Об обороте земель сельскохозяйственного назначения" от 24.07.2002 N 101-ФЗ
-	\webbibitem{business-online}{https://www.business-gazeta.ru/article/412341}{Пересказ заседания Государственного Совета, опубликованный в газете Бизнес Online}{17.05.2022}
 	\bibitem{nature-law} Распоряжение Минприроды России от 25.11.2019 N 35-р "Об утверждении Методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций"
+	
+	\weblink*{postman}{https://www.postman.com/}{Официальный сайт инструмента для тестирования API \en{Postman}}{25.05.2022}
 \end{thebibliography}
