--- a/report/contents.tex
+++ b/report/contents.tex
@@ -1,5 +1,7 @@
 % !TeX spellcheck = en_US
 
+\newcont*{Оглавление}
+
 \setlength{\cftbeforetoctitleskip}{-\baselineskip}
 \setlength{\cftaftertoctitleskip}{0pt}
 
@@ -10,5 +12,3 @@
 \setcounter{tocdepth}{3}
 
 \tableofcontents
-
-\clearpage
