--- a/report/description.tex
+++ b/report/description.tex
@@ -2,62 +2,232 @@
 
 \section{Описание решения}
 
-\subsection{Сценарии использования}
-
 \tab
-Были разработаны следующие сценарии использования:
-\input{scenarios}
-\vspace{\baselineskip}
-
-\subsection{Модель данных}
-
-\tab
-База данных была спроектирована с помощью ER-метода (метода \textquote{сущность‐связь}).
-Для этого была создана ER‐модель, показывающая как атрибуты сущностей предметной области, так и их связи.
-Атрибут или атрибуты, уникально идентифицирующие сущность, называются ключевыми, на диаграмме они подчёркнуты.
-
-\subsubsection{Описание сущностей}
-
-\tab
-В предметной области можно выделить следующие сущности:
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
-	\item \textquote{Пользователь} с ключом \textquote{Адрес электронной почты} и атрибутами: \textquote{Хэш сумма пароля}, \textquote{Имя}, \textquote{Дата регистрации в системе}, \textquote{Время последнего входа в систему}, \textquote{Является ли пользователь администратором}, \textquote{Является ли пользователь специалистом}, \textquote{Активен ли аккаунт пользователя}, \textquote{Фото профиля} и \textquote{Уменьшенное фото профиля}.
-	\item \textquote{Отчёт} с ключом \textquote{Номер отчёта} и атрибутами: \textquote{Дата и время наблюдения}, \textquote{Адрес}, \textquote{Первый комментарий}, \textquote{Координаты}, \textquote{Статус} и \textquote{Вид растения}.
-	\item \textquote{Комментарий} без ключа и с атрибутом: \textquote{Текст комментария}.
-\end{itemize}
-
-\subsubsection{ER модель}
-
-\tab
-Между сущностями можно установить следующие связи:
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
-	\item \textquote{Пользователь - Отчёт}: пользователь оставляет отчёт о наблюдении потенциально опасного для человека растения. Связь не обязательная, так как в случае удаления аккаунта пользователя оставленные им отчёты остаются, имеет степень 1 со стороны пользователя и n со стороны отчёта.
-	\item \textquote{Отчёт - Комментарий}: комментарий относится к какому-либо отчёту. Связь обязательная, так как комментарий не имеет смысла без отчёта, к которому он относится, имеет степень 1 со стороны отчёта и n со стороны комментария.
-	\item \textquote{Пользователь - Комментарий}: пользователь оставляет комментарий к отчёту. Связь не обязательная, так как в случае удаления аккаунта пользователя оставленные им комментарии остаются, имеет степень 1 со стороны пользователя и n со стороны комментария.
-\end{itemize}
-
-\tab
-На рисунке 2 представлена ER диаграмма модели. \\
-\picturetwo
-
-\subsubsection{Реляционная модель}
-
-
+Во ходе выбора технологий особое внимание было уделено лицензии, под которой распространяется их исходный код, так как распространение конечного продукта планируется под открытой лицензией.
 
 \subsection{Серверная часть ПО}
 
+\tab
+Серверная часть системы была написана на языке программирования \en{Python} с использованием фреймворка \en{Django}.
+Такой выбор обусловлен тем, что этот фреймворк с одной стороны предлагает единый интерфейс доступа к различным базам данных, что будет полезно в случае необходимости изменения СУБД, а с другой стороны удовлетворяет необходимость создания графического пользовательского интерфейса для администраторов приложения, автоматически генерируя сервисный сайт.
+
+\tab
+В качестве системы управления базами данных была использована \en{PostgreSQL}, так как она распространяется под открытой лицензией, а также имеет специальные геометрические типы данных, которые можно использовать для работы с географическими координатами.
+Для работы с ними также используется программа \en{PostGIS}.
+Она предоставляет увеличение скорости работы до 2.5 раз по сравнению с аналогами (например, \en{MongoDB}) при работе со сложными запросами к геометрическим данным (например, вычислений расстояния между точками)\cite{postgis-vs-mongo}.
+
+\tab
+Для каждого отношения в базе данных был создан класс-модель, наследник класса \code{Model} фреймворка \en{Django}.
+Эти классы позволяют программе получать доступ к сохранённым в БД данным.
+В этих классах на значения некоторых полей БД были наложены ограничения, представленные в таблице 2.
+\tabletwo
+
+\tab
+Также для каждого отношения в базе данных был создан класс-админ, наследник класса \code{Model} фреймворка \en{Django}.
+Эти классы управляют представлением данных из БД на сервисном сайте системы, описывают порядок и вид отображения полей, а также значения каких полей могут быть изменены администраторами системы.
+
+\tab
+Кроме того были описаны действия, которые можно производить с несколькими объектами из базы данных одновременно, они описаны в таблице 3.
+\tablethree
+
+\tab
+Были добавлены необходимые для работы фреймворка \en{Django} классы, изменён внешний вид отображения нескольких полей (например, поля пароля), добавлены служебные функции (например, для создания и сохранения уменьшенной копии фотографий) и константы.
+
+\tab
+Для импорта и экспорта данных, хранящихся в системе, была добавлена консольная команда, описанная в классе, наследнике класса \code{BaseCommand} фреймворка \en{Django}.
+Эта команда позволяет загружать в систему данные, хранящиеся в JSON файле (не сжатом или сжатом при помощи алгоритма \en{Deflate}), выгружать из неё данные в такой же файл, а также очищать базу данных системы и удалять загруженные пользователями изображения.
+
 \subsection{API серверной части ПО}
+
+\tab
+В качестве архитектуры API серверной части ПО была выбрана архитектура REST\cite{???}, так как она позволяет кеширование данных, полученных от серверного приложения, что уменьшает нагрузку на интернет соединение пользователя в случае большого количества отчётов, а также позволяет серверному приложению не хранить данные о состоянии пользователя, что увеличивает возможности масштабирования системы.
+
+\tab
+Для создания API был использован \en{Django REST Framework}, позволяющий создавать интерфейсы доступа к приложениям, написанным при помощи Django, так как он поддерживает множество видов аутентификации пользователей, а также позволяет настроить способы сериализации и десериализации данных при отправке их пользователям и получении от пользователей соответственно.
+
+\tab
+Для каждого отношения в базе данных был создан класс-сериализатор, наследник класса \code{ModelSerializer} фреймворка \en{DRF}.
+Эти классы позволяют корректно переводить данные из Python объектов, которые фреймворк \en{Django} может загружать в базу данных, в JSON объекты и обратно.
+Также эти классы обрабатывают и сохраняют присланные пользователями фотографии.
+Каждый из этих классов может работать в нескольких режимах, преобразуя данные разным образом для отправки пользователям, для выгрузки из системы в виде файла и, в случае отчётов, для выгрузки в виде .CSV таблицы.
+В таблице 4 описано, как преобразуются поля разных объектов при обработке сериализаторами в разных режимах работы (S обозначает сериализацию, а D -- десериализацию).
+\tablefour
+
+\tab
+Также для каждого отношения в базе данных, кроме Фотографии, был создан класс-представление, наследник класса \code{GenericViewSet} фреймворка \en{DRF}.
+Эти классы позволяют пользователям получать доступ к данным, сохранённым в системе, при помощи HTTP запросов.
+Для отношения Фотография класса-представления создано не было, так как при сериализации фотографии вкладываются в отчёты, к которым они приложены.
+Описание данных, которыми серверная часть системы обменивается с администрацией и пользователями при помощи API представлено на рисунке 4.
+\picturefour
+
+\tab
+Для отправки данных в систему пользователям необходима авторизация. В качестве метода авторизации был выбран метод авторизации при помощи токена. При регистрации аккаунта токен сохраняется в базе данных, после чего, при каждом вызове методов API, требующих авторизации, пользователь передаёт свой токен в заголовке \code{Authorization}. При удалении аккаунта токен из базы данных также удаляется.
+
+\tab
+Для обеспечения возможности авторизации был создан отдельный класс-представление, позволяющий пользователям создавать профиль, входить в систему, подтверждать адрес электронной почты, менять данные своего профиля, выходить из системы и удалять свой профиль.
+Кроме того, для проверки доступности и быстродействия системы был добавлен ещё один HTTP запрос, \code{healthcheck}.
+
+\tab
+Так как в соответствии с REST архитектурой серверное ПО не должно хранить данные о состоянии пользователя, для подтверждения адреса электронной почты пользователя используется следующий код, состоящий из восьми букв латинского алфавита и цифр, созданный при помощи функции \code{random.choice}.
+В качестве ключа для этой функции выступает конкатенация адреса электронной почты пользователя, \en{DJANGO\-\_SECRET\-\_KEY} (уникального для каждого работающего экземпляра программы ключа) и \en{Unix Timestamp} текущего времени, делённого без остатка на 600, т. е. округлённого до 10 минут.
+Таким образом обеспечивается как проверка адреса электронной почты, так и ограничение на действие кода в 10 минут.
+
+\tab
+Для предотвращения DDoS атак на систему было предусмотрено ограничение на отправку пользователем требующих авторизации запросов в 4 запроса в минуту.
+
+\tab
+HTTP запросы пользователей обрабатываются при помощи объекта класса \code{Simple\-Router}, входящего в состав фреймворка \en{DRF}. \en{OpenAPI} спецификация API системы представлена в \additionref{openapi}{Приложении Б}.
 
 \subsection{Клиентская часть ПО}
 
+\tab
+Код приложения-клиента был написан на языке \en{Dart} с использованием фреймворка \en{Flutter}\cite{flutter-vs-react}.
+Такой выбор обусловлен необходимостью одновременной разработки для мобильных платформ и web браузеров.
+Разработка единой кодовой базы для всех платформ позволяет сократить время разработки, а также бюджет и расходы на поддержку проекта.
+Фреймворк \en{Flutter} распространяется под открытой лицензией, а также позволяет создать одинаковый пользовательский интерфейс для всех платформ и добиться высокой производительности на каждой из них, что улучшает опыт пользователя\cite{flutter-better}.
+
+\tab
+Для хранения и передачи пользовательских данных в клиентском приложении была выбрана архитектура BLoC\cite{bloc-better}, специально разработанная для этого фреймворка, и позволяющая отделить бизнес-логику программы от пользовательского интерфейса, что в свою очередь приведёт к меньшим временным и финансовым затратам на тестирование программы.
+
+\tab
+Для каждого отношения в базе данных был создан класс-модель, наследник класса \code{Equatable} библиотеки \en{equatable}.
+При помощи библиотек \en{json\-\_serializable} и \en{json\-\_annotation} для каждого из этих классов были сгенерированы функции сериализации и десериализации, которые при отправке данных в систему исключают лишние и пустые поля.
+
+\tab
+Были созданы классы бизнес логики, наследники класса \code{Bloc} библиотеки \en{bloc}.
+Они были разделены в соответствии с макетом пользовательского интерфейса так, чтобы с каждым экраном, с которым взаимодействует пользователь, был связан отдельный класс бизнес логики.
+Исключение представляет класс \code{Account\-Bloc}, который связан одновременно с экраном авторизации и изменения данных профиля пользователя.
+Эти классы позволяют реагировать на сигналы, посланные пользователем, устройством пользователя или серверной частью системы.
+В качестве реакции может выступать изменение его текущего состояния, HTTP запрос на серверную часть системы и т. д.
+
+\tab
+Для каждого класса бизнес логики были созданы классы сигналов и состояний.
+Классы сигналов содержат информацию о том, какой сигнал поступил в обработку, а также данные, входящие в состав этого сигнала.
+Классы состояния хранят текущее состояние одной конкретной части бизнес логики программы и позволяют пользовательскому интерфейсу реагировать на его изменения.
+Также для некоторых классов бизнес логики были созданы классы форм, наследники класса \code{FormzInput} библиотеки formz.
+Эти классы позволяют проверять корректность данных введённых в различные поля для ввода пользовательского интерфейса перед их отправкой.
+
+\tab
+Для каждого класса бизнес логики были созданы классы репозиториев.
+Такие классы содержат функции, отправляющие HTTP запросы при помощи API серверной части системы, а также функции обработки ответов и ошибок.
+Один из них, класс \code{Account\-Repository}, хранит также токен авторизации текущего пользователя (при его наличии).
+При каждом изменении токен сохраняется в локальное хранилище браузера при помощи библиотеки \code{shared\-\_preferences} и считывается оттуда при перезагрузке приложения.
+
+\tab
+При помощи стандартных виджетов, входящих в состав фреймворка \en{Flutter} был реализован пользовательский интерфейс в соответствии с спроектированным макетом.
+В интерфейс заложена возможность изменения при изменении состояния бизнес логики приложения.
+
 \subsection{Система автоматической проверки изображений}
 
-\subsection{Пользовательский интерфейс}
+\tab
+В качестве средства повышения точности присланных пользователями данных была выбрана свёрточная нейронная сеть\cite{convolutional-better}, так как она позволяет достаточно точно произвести классификацию фотографий.
+Для реализации нейронной сети был выбран фреймворк \en{TensorFlow}\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
 
-\subsubsection{Пользовательский интерфейс клиентского приложения}
+\tab
+В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{XCeption}\cite{xception-better}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
 
-\subsubsection{Пользовательский интерфейс сервисного сайта}
+\tab
+Система автоматической проверки изображений -- желательный, но не обязательный компонент системы.
+Для каждой конкретной ситуации наблюдения за определённым набором видов растений модель необходимо обучать заново, используя при этом фотографии тех растений, за которыми производится наблюдение.
+В качестве примера того, как именно она может быть обучена, был написан блокнот \en{JuPyter Notebook}, позволяющий обучить модель для определения борщевика Сосновского.
+Для обучения нейронной сети определению других видов растений, его необходимо частично изменить. 
+
+\tab
+Так как система автоматической проверки изображений используется также для того, чтобы подсказывать пользователю, каким образом он может улучшить свою фотографию, в её задачи входит разделение всех фотографий на три класса: \en{hogweed} (фотографии, на которых изображён борщевик Сосновского), \en{cetera} (фотографии, на которых изображены другие растения) и \en{other} (фотографии, на которых не изображены растения).
+Изображения, на которых не изображены растения были взяты из набора данных \en{Open\-Images}\cite{???}, тогда как изображения борщевика и других растений были выгружены из системы \en{iNaturalist}\cite{inaturalist}.
+В общем при обучении использовалось по 7100 фотографий каждого типа.
+
+\tab
+Перед началом обучения изображения были скачаны по ссылкам, взятым из .CSV файлов наборов данных.
+Для избежания возможных погрешностей работы сети, вызванных обучением на нескольких одинаковых изображениях, во время скачивания для каждого изображения был рассчитан хэш и, в случае совпадения этого хэша с хэшем какого-либо изображения, загруженного ранее, оно пропускалось.
+
+\tab
+Изображения были разделены на набор для обучения и набор для валидации, после чего оба набора были подвергнуты аугментации при помощи случайного горизонтального поворота изображений и случайного угла наклона не более чем на 18 градусов.
+Для соответствия критериям ввода модели \en{XCeption} изображения были уменьшены до размера 299 на 299 пикселей.
+
+\tab
+Модель была дополнена новыми слоями и скомпилирована.
+В качестве алгоритма оптимизации был использован алгоритм \en{Adam}, а в качестве функции потерь -- функция категориальной кросс-энтропии.
+Прогресс обучения измерялся по точности классификации.
+Схема скомпилированной модели представлена на рисунке 5.
+% \picturefive
+
+\tab
+Обучение верхних слоёв модели производилось в течении 16 эпох, при этом оно прекращалось как только прогресс за две эпохи подряд не превосходил 0.01 процента.
+Темп обучения составил 0.0001.
+График обучения представлен на рисунке 6.
+% \picturesix
+
+\tab
+Дообучение модели (обучение с 80\% \textquote{размороженных} нижних, предобученных слоёв) производилось в таких же условиях, только на этот раз в качестве алгоритма оптимизации был использован алгоритм \en{RMSprop}, а темп обучения составил 0.00001.
+График обучения представлен на рисунке 7.
+% \pictureseven
+
+\tab
+После окончания обучения модель была преобразована в формат .TFLITE для использования в клиентской части системы.
 
 \subsection{Процесс установки и запуска системы}
+\label{subsec:installing-and-launching}
+
+\tab
+Вследствие того, что серверная часть системы требует установки и настройки сразу нескольких программ определённых версий, было принято решение автоматизировать процесс её запуска.
+
+\tab
+Пользовательские настройки системы, такие как \en{DJANGO\-\_SECRET\-\_KEY}, доменное имя сервера, имя пользователя и пароль администратора системы и базы данных, хранятся в конфигурационном файле в корневой директории серверной части системы.
+Настройки из этого файла передаются в систему в виде переменных среды.
+Также в ней в специальной папке с сертификатами хранятся сертификаты для запуска серверной части системы с возможностью доступа при помощи протокола HTTPS и подписи отправляемых системой электронных писем.
+Для их генерации был написан скрипт, в качестве параметров принимающий настройки, которые пользователь желает задать сам, и генерирующий остальные.
+
+\tab
+В систему был добавлен отладочный режим работы.
+От стандартного он отличается тем, что в нём по умолчанию используется HTTP вместо HTTPS, демонстрируются развёрнутые сообщения об ошибках, а также вместо электронных писем коды авторизации доставляются пользователям в теле ответов на запросы подтверждения электронной почты.
+Отладочный режим работы используется по умолчанию при локальном запуске системы.
+
+\tab
+Для упрощения локального запуска системы был написан скрипт локального запуска.
+В его задачи не входит полная настройка системы, так как она включает в себя действия, потенциально небезопасные для устройства пользователя, такие как, например, установка определённой версии СУБД от имени администратора.
+Скрипт упрощения локального запуска проверяет соответствие системы требованиям, выводит на экран советы по установке программ и выполняет их настройку.
+Также с его помощью можно установить локальные переменные, необходимые для запуска серверной части системы.
+Локальный режим запуска системы не рекомендуется использовать при стандартном режиме работы из-за уязвимостей системы, которые могут возникнуть при некорректной настройке.
+
+\tab
+В качестве альтернативы локальному режиму запуска предлагается использовать режим запуска, использующий платформу \en{Docker} и утилиту \en{docker-compose}.
+Для его реализации был создан файл с определениями версий и настроек контейнеров, используемых системой, а также файл, содержащий команды для сборки образа самой системы.
+В этом режиме запуска системе не требуется никаких дополнительных настроек кроме конфигурационного файла.
+Также этот режим по умолчанию использует сервер \en{Daphne} и стандартный режим запуска системы.
+
+\tab
+Контейнер, содержащий серверную часть системы был опубликован в регистре контейнеров \en{GitHub}\cite{http://ghcr.io/}, что позволило реализовать упрощённый режим запуска системы, для которого не требуется ничего кроме конфигурационных файлов системы и файла с описанием настроек контейнеров \code{docker-compose.yml}.
+
+\tab
+Автоматизация сборки клиентской части системы затруднительна, так как одной из основных констант в ней является адрес сервера, на котором запущена серверная часть системы, и этот адрес может меняться от сборки к сборке.
+Тем не менее, чтобы избежать необходимости вносить изменения в её исходный код, эта константа была вынесена в параметры сборки и определена при помощи \code{dart-define}.
 
 \subsection{Непрерывная интеграция и развёртывание}
+
+\tab
+Для удобства тестирования и автоматизации сборки и публикации артефактов системы, таких как, например, \en{Docker} контейнер, содержащий её серверную часть, была использована платформа \en{GitHub Actions}.
+
+\tab
+С её помощью после каждого обновления исходного кода системы выполняются следующие сценарии:
+\begin{itemize}
+	\item Если был изменён исходный код серверной части системы:
+	\begin{enumerate}
+		\item Производится сборка и локальный запуск системы в отладочном режиме работы, проводятся unit тесты.
+		\item Производится сборка и запуск системы с использованием платформы \en{Docker} в отладочном режиме работы, проводятся тесты API при помощи программы \en{Postman} и библиотеки \en{newman}.
+		\item Если пункты 1 и 2 были выполнены успешно, собирается и публикуется \en{Docker} контейнер, содержащий новую версию серверной части системы.
+		\item Если пункт 3 был выполнен успешно, собирается архив, содержащий все необходимые скрипты и конфигурационные файлы для запуска системы в упрощённом режиме и публикуется на странице системы в \en{GitHub}\cite{https://github.com/pseusys/HogWeedGo}.
+	\end{enumerate}
+	\item Если был изменён исходный код клиентской части системы:
+	\begin{enumerate}
+		\item Собирается web-версия клиентского приложения и публикуется на странице системы в \en{GitHub Pages}\cite{https://pseusys.github.io/HogWeedGo/}.
+	\end{enumerate}
+	Это действие также можно выполнить вручную со страницы системы в \en{GitHub}, указав при этом адрес сервера для клиентской части системы (по умолчанию используется \code{localhost}).
+	\item Если был изменён исходный код системы автоматической проверки изображений:
+	\begin{enumerate}
+		\item Производится тестирование последней версии модели системы автоматической проверки изображений, опубликованной в разделе \en{Releases}.
+	\end{enumerate}
+\end{itemize}
+
+\tab
+Использование облачной платформы для сборки и развёртки системы не только помогает отслеживать появление ошибок после публикации каждого обновления исходного кода системы, но и даёт возможность пользователям системы отказаться от её самостоятельной настройки в пользу использования готовых и автоматически собранных артефактов.
