--- a/report/document.tex
+++ b/report/document.tex
@@ -1,16 +1,20 @@
 % !TeX spellcheck = en_US
 
 \begin{spacing}{\trueonehalfspace}
+	\include{abstract}
 	\include{contents}
+	\include{notes}
 	\include{definitions}
 	
 	\include{introduction}
 	\include{overview}
-	\include{requirements}
+	\include{methods}
+	\include{project}
 	\include{description}
 	\include{tests}
-	\include{additional}
+	\include{ecology}
 	\include{conclusion}
+	\label{document-end}
 	
 	\include{bibliography}
 \end{spacing}
