--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -7,32 +7,39 @@
 При этом под потенциально опасными следует понимать как те растения, которые представляют прямую угрозу жизни и здоровью человека, так и те, которые негативно влияют на сельскохозяйственную, промышленную и иные сферы деятельности человека\cite{alien-plants}.
 Отчасти актуальность этой проблемы объясняется расширением пригодных для произрастания таких растений территорий\cite{invasive-plants}.
 
-\nwln
+\tab
 В европейской части России одним из самых опасных растений является борщевик Сосновского\cite{heracleum}, поэтому в данной работе наблюдение за распространением потенциально опасных растений рассматривается на его примере.
 Согласно данным из открытой базы данных РИВР\cite{rivr} на территории Санкт-Петербурга и Ленинградской области насчитывается более 350 очагов распространения \la{Heracleum sosnowskyi}.
 По данным, опубликованным в журнале \en{Esquire}\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России.
 
-\nwln
+\tab
 На сегодняшний день не существует специализированного автоматизированного компьютерного решения для контроля над распространением потенциально опасных видов растений, которое, помимо наблюдения и каталогизации, включало бы в себя взаимодействие с группами специалистов, способными устранить и остановить очаги распространения.
 
-\nwln
+\tab
 \textbf{Целью данной работы} стала разработка такой системы, позволяющей решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции.
 Такая система должна позволить широким массам добровольцев осуществлять наблюдение за потенциально опасными видами растений, а также давать группе экологов возможность осуществлять модерацию и анализ собранных данных.
 
-\nwln
+\tab
 \textbf{Для достижения данной цели были сформулированы следующие задачи}:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+\begin{enumerate}
 	\item Разработка архитектуры, описание ее компонентов и путей передачи данных.
 	\item Создание серверного приложения для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
 	\item Создание кроссплатформенного мобильного и web приложения, позволяющего добровольцем заносить наблюдения в систему.
 \end{enumerate}
 
-\nwln
-\textbf{Объектом данного исследования} являются особенности создания кроссплатформенной системы, реализующей клиент-серверную архитектуру и позволяющей решить проблему распространения вредоносных растений.
+\tab
+\textbf{Объектом данного исследования} является автоматизированный учёт и хранение данных о распространение вредоносных растений.
 
-\nwln
-\textbf{Предметом данного исследования} является распространение опасных для человека видов растений, контроль их популяции.
+\tab
+\textbf{Предметом данного исследования} является удобство и скорость отправки и получения данных.
+Под удобством подразумевается длина последовательности действий, которые необходимо произвести пользователю для выполнения задачи.
+Минимизация длины этой последовательности считается повышением удобства.
 
-\nwln
-\textbf{Практическая ценность данной работы} заключается в возможности контроля над распространением потенциально опасных видов растений (в частности, Борщевика Сосновского).
+\tab
+\textbf{Практическая ценность данной работы} заключается в возможности контроля над распространением потенциально опасных видов растений (в частности, борщевика Сосновского).
 При необходимости с помощью описанного ПО можно проводить наблюдения за распространением любых видов растений.
+
+\tab Публикации по теме работы:
+\begin{itemize}
+	\item \weblink{https://etu.ru/assets/files/Faculty-FKTI/MO/sbornik-2022-moevm.pdf}{Сборник докладов студентов и аспирантов на научно-техническом семинаре кафедры МО ЭВМ, 2022 год, стр. 12}{23.05.2022}
+\end{itemize}
