--- a/report/overview.tex
+++ b/report/overview.tex
@@ -8,15 +8,15 @@
 В рамках данной работы под наблюдением за распространением потенциально опасных для человека видов растений предлагается понимать сбор, каталогизацию и хранение данных о них.
 Предполагается, что наблюдение за такими растениями будет поручено группе учёных-экологов, в обязанности которых будет входить работа с системой.
 
-\nwln
+\tab
 Необходимая для осуществления наблюдения информации об очагах распространения опасных растений включает в себя фотографии растения, его географические координаты и краткое описание, данное обнаружившим его человеком, самого растения, а также места его произрастания.
 Такой набор данных в данной работе будет называться \linkterm{report}{отчёт}.
 Функция сортировки и поиска конкретного отчёта по нескольким признакам в данной работе будет называться \linkterm{processing}{работа с данными}.
 
-\nwln
+\tab
 В случае наблюдения за несколькими видами потенциально опасных растений каждый отчёт также должен содержать информацию о видовой принадлежности обнаруженного растения.
 В следствии того, что эти сведения со временем могут терять актуальность или же требовать модерации, в отчёте необходимо также хранить информацию о статусе данных и дате совершения наблюдения.
-Предлагается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от ситуации и цели наблюдения возможно добавление и других. \\
+Предлагается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от ситуации и цели наблюдения возможно добавление и других.
 
 \subsection{Существующие решения}
 
@@ -24,11 +24,11 @@
 Несмотря на то, что системы, решающей именно эту проблему пока не существует, можно найти множество систем с похожей функциональностью.
 Для того, чтобы определить, нельзя ли вместо создания нового использовать готовое решение или его фрагменты, было произведено сравнение систем с аналогичной или похожей функциональностью по нескольким критериям.
 
-\nwln
+\tab
 Поиск аналогов производился среди систем, которые в настоящий момент используются экологами для фиксации месторасположения борщевика, а также в интернете по ключевым словам \textquote{фотофиксация растений}, \textquote{поиск и фотофиксация}, а также \textquote{составление пользовательских карт}.
 В качестве аналогов были выбраны сервисы, позволяющие отмечать что-либо на карте, производить поиск растений или же просто собирать и обрабатывать пользовательские данные.
 
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+\begin{enumerate}
 	\item \en{iNaturalist} \\
 	\en{iNaturalist}\cite{inaturalist} - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с \en{National Geographic}.
 	Сервис позволяет глобальному сообществу волонтёров наблюдать за живыми организмами и присылать собранную информацию о них на сайт.
@@ -52,21 +52,32 @@
 	Также в приложении доступно описание каждого растения, которое оно может идентифицировать.
 \end{enumerate}
 
-\nwln
+\tab
 Для сравнения аналогов были использованы следующие критерии:
 
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+\begin{itemize}
 	\item Полнота данных -- возможность хранения всех необходимых для отчётов данных, а именно: фотографию и краткое описание растения и места его произрастания, географические координаты, дату и время обнаружения, данные о пользователе, который его произвёл, и текущий статус отчёта.
 	\item Обработка данных -- возможность проверки принадлежности растений к отслеживаемым видам, а также работы с данными.
 	\item Мобильный интерфейс -- возможность отправки отчётов в систему как при помощи приложений для операционных систем iOS и \en{Android} так и при помощи web интерфейса, а также существование API для сбора данных.
-	\item Доступ к данным -- возможность выгрузки и сохранения данных в формате “CSV”, наличие демонстрации статистики собранных данных на сайте, а также наличие API для демонстрации данных.
+	\item Доступ к данным -- возможность выгрузки и сохранения данных в формате “CSV”, демонстрация статистики собранных данных на сайте, а также наличие API для демонстрации данных.
 	\item Модерация данных -- возможность модерирования данных, управления аккаунтами пользователей, а также связи с пользователями при помощи подтверждённых при регистрации методов.
 \end{itemize}
 
-\nwln
-Результаты сравнения существующих аналогов приведены в таблице 1. \\
+\tab
+Результаты сравнения существующих аналогов приведены в таблице 1.
 \tableone
 
-\nwln
+\subsection{Вывод}
+
+\tab
 Из анализа соответствия существующих аналогов необходимым критериям становится очевидно, что на данный момент не существует системы, предоставляющей требуемую функциональность в полном объёме.
-Вследствие этого было принято решение о необходимости разработки такой системы.
+
+\tab
+Ни один из рассмотренных аналогов не удовлетворяет одновременно критериям \textquote{Обработка данных} (повышающему удобство использования ПО для администратора системы) и \textquote{Мобильный интерфейс} (повышающему удобство использования ПО для пользователей системы).
+
+\tab
+Кроме того, единственный сервис, удовлетворяющий критерию \textquote{Доступ к данным}, \en{iNaturalist}, предлагает возможность выгрузки данных\cite{inaturalist-export} исключительно для зарегистрированных пользователей, что снижает удобство его использования.
+Также этот процесс занимает длительное время (был проведён эксперимент, процесс экспорта данных был запущен 5 раз, среднее время получения данных составило 14 минут).
+
+\tab
+Вследствие этого было принято решение о необходимости разработки программной системы наблюдения за потенциально опасными для человека видами растений, которая бы не только соответствовала перечисленным выше критериям, но и предоставляла бы возможность более удобной и быстрой отправки и получения данных в сравнении с аналогами.
