--- a/report/scenarios.tex
+++ b/report/scenarios.tex
@@ -23,7 +23,7 @@
 	Результат: Пользователь посмотрел данные со всей информацией по операциям конкретного изделия.
 	
 	\item \textit{Авторизация в системе} \\
-	Условие: На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}} ИЛИ на основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+}. \\
+	Условие: На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}} ИЛИ на основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+} ИЛИ на странице просмотра отчёта нажимает на ссылку \textquote{\en{Sign in}}. \\
 	Основной сценарий:
 	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 		\item Открывается страница авторизации пользователя.
