--- a/report/tables.tex
+++ b/report/tables.tex
@@ -1,23 +1,129 @@
 % !TeX spellcheck = russian-aot
 
 \newcommand{\tableone}{
-	\begin{xltabular}{\textwidth}{ | l | c | c | c | c | c | }
+	\begin{xltabular}[!htbp]{\textwidth}{ | c | Y | Y | Y | Y | Y | }
 		\longcaption{Результаты сравнения аналогов}
-		
-		\hline
-		\multirowcell{2}{Критерий} & \multicolumn{5}{ c | }{Название сервиса} \\
+		\multirowcell{2}{\makecell{Название \\ сервиса}} & \multicolumn{5}{ c | }{Критерий} \\
 		\cline{2-6}
-		& iNaturalist & РИВР & \makecell{Google \\ MyMaps} & \makecell{Plant \\ Finder} & \makecell{Flora \\ Incognita} \\
+		& Полнота данных & Обработка данных & Мобильный интерфейс & Доступ к данным & Модерация данных \\
 		\hline
-		Полнота данных & + & - & + & + & - \\
+		iNaturalist & \centering + & Обработка сотрудниками сервиса & + & + & Модерация сотрудниками сервиса \\
 		\hline
-		Обработка данных & - & - & - & + & - \\
+		РИВР & Не хранится статус наблюдения & + & Только web интерфейс & Публичный API отсутствует & + \\
 		\hline
-		Мобильный интерфейс & + & - & + & - & + \\
+		\makecell{Google \\ MyMaps} & + & Сортировка и фильтрация меток недоступны & + & Публичный API отсутствует & + \\
 		\hline
-		Доступ к данным & + & - & - & + & + \\
+		\makecell{Plant \\ Finder} & + & + & Только web интерфейс & Экспорт только в виде таблицы & + \\
 		\hline
-		Модерация данных & + & - & - & + & - \\
+		\makecell{Flora \\ Incognita} & + & Поддержка совместных наблюдений в разработке & + & Экспорт только в виде таблицы & Поддержка совместных наблюдений в разработке \\
+	\end{xltabular}
+}
+
+\newcommand{\tabletwo}{
+	\begin{xltabular}[!htbp]{\textwidth}{ | c | c | X | }
+		\longcaption{Ограничения на значения полей БД}
+		Отношение & Поле & \makecell{Ограничения} \\
 		\hline
+		\multirow{3}{*}{Пользователь} & Адрес электронной почты & \inlined{{Уникально}} \\
+		\cline{2-3}
+		& Фото профиля & \inlined{{Необязательно}} \\
+		\cline{2-3}
+		& Уменьшенное фото профиля & \inlined{{Необязательно}} \\
+		\hline
+		\multirow{7}{*}{Отчёт} & Номер пользователя & \inlined{{Необязатьельно, При удалении: обнулить}} \\
+		\cline{2-3}
+		& Адрес & \inlined{{Макс. длина: 128 букв, Необязательно}} \\
+		\cline{2-3}
+		& Первый комментарий & \inlined{{Макс. длина: 2048 букв}} \\
+		\cline{2-3}
+		& Статус & \inlined{{Макс. длина: 8 букв, Ограничение кол-ва значений}} \\
+		\cline{2-3}
+		& Вид растений & \inlined{{Макс. длина: 64 буквы}} \\
+		\hline
+		\multirow{1}{*}{Фотография} & Номер отчёта & \inlined{{При удалении: удалить}} \\
+		\hline
+		\multirow{2}{*}{Комментарий} & Номер пользователя & \inlined{{Необязатьельно, При удалении: обнулить}} \\
+		\cline{2-3}
+		& Номер отчёта & \inlined{{При удалении: удалить}} \\
+	\end{xltabular}
+}
+
+\newcommand{\tablethree}{
+	\begin{xltabular}[!htbp]{\textwidth}{ | c | c | X | }
+		\longcaption{Действия с данными}
+		Объект & Действие & \makecell{Описание} \\
+		\hline
+		\multirow{6}{*}{Пользователь} & Отправка письма & Перенаправление по ссылке типа MAILTO, в которой указаны адреса электронной почты выбранных пользователей \\
+		\cline{2-3}
+		& Блокирование & Изменение значения поля \textquote{Активен ли аккаунт пользователя} для выбранных пользователей на значение \code{False} \\
+		\cline{2-3}
+		& Удаление & Удаление выбранных аккаунтов пользователей навсегда \\
+		\hline
+		\multirow{3}{*}{Отчёт} & Выгрузка данных & Сериализация выбранных отчётов в файл формата .CSV  и инициализация процесса скачивания его \\
+		\cline{2-3}
+		& Удаление & Удаление выбранных отчётов пользователей навсегда \\
+	\end{xltabular}
+}
+
+\newcommand{\tablefour}{
+	\begin{xltabular}[!htbp]{\textwidth}{ | c | Y | X | X | X | }
+		\longcaption{Особенности сериализации}
+		\multirowcell{2}{\rota{Объект}} & \multirowcell{2}{Поле} & \multicolumn{3}{ c | }{Режим работы} \\
+		\cline{3-5}
+		& & Резервное копирование & Отправка пользователям & Выгрузка \\
+		\hline
+		\multirow{27}{*}{\rota{Пользователь}} & Номер пользователя & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{Создаётся} & - \\
+		\cline{2-5}
+		& Адрес электронной почты & Неизменно & \inlinedSD{Удаляется}{Неизменно} & - \\
+		\cline{2-5}
+		& Хэш сумма пароля & Неизменно & \inlinedSD{Удаляется}{Создаётся} & - \\
+		\cline{2-5}
+		& Имя & Неизменно & Неизменно & - \\
+		\cline{2-5}
+		& Дата регистрации в системе & \inlinedSD{Меняется на \en{Unix Timestamp}}{Меняется на дату} & \inlinedSD{Удаляется}{Создаётся} & - \\
+		\cline{2-5}
+		& Время последнего входа в систему & \inlinedSD{Меняется на \en{Unix Timestamp}}{Меняется на дату} & \inlinedSD{Меняется на \en{Unix Timestamp}}{Игнорируется} & - \\
+		\cline{2-5}
+		& Является ли пользователь администратором & Неизменно & \inlinedSD{Удаляется}{Игнорируется} & - \\
+		\cline{2-5}
+		& Является ли пользователь специалистом & Неизменно & \inlinedSD{Неизменно}{Игнорируется} & - \\
+		\cline{2-5}
+		& Активен ли аккаунт пользователя & Неизменно & \inlinedSD{Удаляется}{Игнорируется} & - \\
+		\cline{2-5}
+		& Фото профиля & \inlinedSD{Меняется на URI}{Cохраняется в файл} & \inlinedSD{Меняется на URL}{Cохраняется в файл} & - \\
+		\cline{2-5}
+		& Уменьшенное фото профиля & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Меняется на URL}{Создаётся} & - \\
+		\hline
+		\multirow{20}{*}{\rota{Отчёт}} & Номер отчёта & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{-} \\
+		\cline{2-5}
+		& Номер пользователя & \inlinedSD{Меняется на адрес электронной почты}{Добавляется} & \inlinedSD{Неизменно}{Добавляется} & \inlinedSD{Меняется на адрес электронной почты}{-} \\
+		\cline{2-5}
+		& Дата и время наблюдения & \inlinedSD{Меняется на \en{Unix Timestamp}}{Меняется на дату} & \inlinedSD{Меняется на \en{Unix Timestamp}}{Меняется на дату} & \inlinedSD{Неизменно}{-} \\
+		\cline{2-5}
+		& Адрес & Неизменно & Неизменно & \inlinedSD{Неизменно}{-} \\
+		\cline{2-5}
+		& Первый комментарий & Неизменно & Неизменно & \inlinedSD{Неизменно}{-} \\
+		\cline{2-5}
+		& Координаты & \inlinedSD{Меняется на объект}{Меняется на GeoJSON} & \inlinedSD{Меняется на объект}{Меняется на GeoJSON} & \inlinedSD{Меняется на широту и долготу}{-} \\
+		\cline{2-5}
+		& Статус & Неизменно & \inlinedSD{Неизменно}{Создаётся} & \inlinedSD{Неизменно}{-} \\
+		\cline{2-5}
+		& Вид растения & Неизменно & Неизменно & \inlinedSD{Неизменно}{-} \\
+		\hline
+		\multirow{5}{*}{\rota{Комментарий}} & Номер комментария & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{Создаётся} & - \\
+		\cline{2-5}
+		& Номер пользователя & \inlinedSD{Меняется на адрес электронной почты}{Добавляется} & \inlinedSD{Неизменно}{Добавляется} & - \\
+		\cline{2-5}
+		& Номер отчёта & \inlinedSD{(Входит в состав отчёта)}{Добавляется} & \inlinedSD{(Входит в состав отчёта)}{Добавляется} & - \\
+		\cline{2-5}
+		& Текст комментария & Неизменно & Неизменно & - \\
+		\hline
+		\multirow{10}{*}{\rota{Фотография}} & Номер фотографии & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{-} \\
+		\cline{2-5}
+		& Номер отчёта & \inlinedSD{(Входит в состав отчёта)}{Добавляется} & \inlinedSD{(Входит в состав отчёта)}{Создаётся} & \inlinedSD{(Входит в состав отчёта)}{-} \\
+		\cline{2-5}
+		& Фотография & \inlinedSD{Меняется на URI}{Cохраняется в файл} & \inlinedSD{Меняется на URL}{Cохраняется в файл} & \inlinedSD{Меняется на URL}{-} \\
+		\cline{2-5}
+		& Уменьшенная фотография & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Меняется на URL}{Создаётся} & \inlinedSD{Удаляется}{-} \\
 	\end{xltabular}
 }
