--- a/report/tests.tex
+++ b/report/tests.tex
@@ -2,6 +2,115 @@
 
 \section{Исследование решения}
 
+\subsection{Исследование быстродействия системы}
+
+\tab
+Исследование быстродействия системы было проведено при помощи инструмента \en{Google Chrom Developer Tools} в веб браузере \en{Google Chrome}. Перед началом тестирования в систему были загружены данные о 5000 различных отчётах, сгенерированные автоматически.
+
+\tab
+Каждый запрос к API системы был произведён 15 раз, после чего было получено среднее арифметическое значение времени ответа системы.
+Во время тестирования клиентское и серверное устройство были соединены в локальную сеть при помощи кабеля \en{Ethernet}.
+Полученные значение представлены в таблице 5.
+% \tablefive
+
+\tab
+Таким же методом была найдена средняя скорость выгрузки данных в формате .CSV с сервисного сайта системы. Полученные данные представлены в таблице 6.
+% \tablesix
+
+\tab
+Результаты???
+
 \subsection{Исследование API серверной части ПО}
 
+\tab
+Тестирование API серверной части ПО было произведено при помощи инструмента \en{Postman}\cite{postman}.
+Он позволяет создавать коллекции тестов для одного и того же API, которые могут обмениваться между собой данными при помощи переменных, задавать метод авторизации и общие тесты для всех тестируемых запросов.
+
+\tab
+В ходе тестирования проверялось соответствие ответов, получаемых от сервера ожидаемым результатам. Для каждого теста проверялся как код ответа сервера, он должен находиться в диапазоне $[200; 400)$, так и сам ответ.
+В тех случаях, когда ответ сервера имеет медиа тип \code{text/plain}, его корректность проверялась при помощи регулярных выражений. В тех случаях, когда ответ сервера имеет медиа тип \code{application/json}, его корректность проверялась при помощи JSON схем.
+Кроме того, в случаях, когда одним из полей ответа является URL, проверялась его доступность.
+В тех же случаях, когда в зависимости от введённых данных ответ на запрос может различаться (например, различные дополнительные параметры сортировки или сообщения об ошибке), после выполнения основного корректного запроса выполнялись также и запросы с дополнительными параметрами и ошибками.
+Исключение составили те запросы, на количество которых было установлено ограничение по частоте отправки, такие запросы отправлялись только по одному разу.
+
+\tab
+В качестве примера ниже приведён код проверки доступности фотографии профиля, полученной в результате запроса получения данных текущего пользователя:
+
+\begin{lstlisting}[breaklines=true]
+pm.test('Response photo is valid', () => {
+  const port = pm.collectionVariables.get("SERVER_PORT");
+  pm.sendRequest(`http://localhost:${port}${pm.response.json()['thumbnail']}`, (err, response) => {
+    pm.expect(response.code).to.be.equal(200, "Response photo unavailable!");
+  });
+});
+\end{lstlisting}
+
+\tab
+Для тестирования запросов, требующих авторизации, данные пользователя, необходимые для входа в систему, были сохранены в переменные коллекции.
+Также во время авторизации туда записывался код подтверждения адреса электронной почты и токен авторизации.
+
+\tab
+Тесты были написаны для всех типов запросов и отсортированы таким образом, что, при последовательном их выполнении, ими покрываются все действия пользователя в последовательности, приближенной к определённой сценариями использования последовательности действий реального пользователя:
+\begin{enumerate}
+	\item Проверка статуса системы - \code{/healthcheck}
+	\item Запрос подтверждения адреса электронной почты - \code{/api/me/prove\-\_email}
+	\item Запрос создания профиля пользователя - \code{/api/me/auth}
+	\item Запрос подтверждения нового адреса электронной почты - \code{/api/me/prove\-\_email}
+	\item Запрос изменения данных профиля пользователя - \code{/api/me/setup}
+	\item Запрос получения данных текущего пользователя - \code{/api/me/profile}
+	\item Запрос выхода из системы - \code{/api/me/log\-\_out}
+	\item Запрос входа в систему - \code{/api/me/log\-\_in}
+	\item Запрос создания отчёта - \code{/api/reports}
+	\item Запрос получения данных пользователя - \code{/api/users/\{id\}}
+	\item Запрос создания комментария - \code{/api/comments}
+	\item Запрос получения отчётов - \code{/api/reports}
+	\item Запрос удаления профиля текущего пользователя - \code{/api/me/leave}
+\end{enumerate}
+
+\tab
+Тестирование, проведённое таким образом, позволило найти и исправить некоторые ошибки в работе серверной части системы, а настройка проведения этого тестирования в системе непрерывной интеграции и развёртывания дала возможность отслеживать несоответствия между ожидаемой и фактической функциональностью системы после каждого обновления её исходного кода.
+
 \subsection{Исследование системы автоматической проверки изображений}
+
+\tab
+Система автоматической проверки изображений была протестирована с помощью специально для этой цели написанного скрипта на языке \en{Python}, а также набора данных, состоящего из 150 размеченных изображений разных классов (по 50 каждого), не использовавшихся ни при тестировании ни при валидации.
+
+\tab
+Для получения более точного времени обработки изображений на мобильных устройствах во время тестирования не использовалась графическая карта устройства.
+
+\tab
+Для обученной нейронной сети был получен следующий результат:
+\begin{itemize}
+	\item Средняя точность классификации: 
+	\item Среднее время обработки изображения:
+\end{itemize}
+
+\tab
+Размер файла .TFLITE, содержащего обученную нейронную сеть, составил 79.3 mb.
+Исходя из этого и результатов тестирования можно сделать вывод, что система автоматической проверки изображений удовлетворяет заявленным требованиям к ней.
+
+\tab
+Настройка проведения этого тестирования в системе непрерывной интеграции и развёртывания дала возможность отслеживать точность классификации изображений системой автоматической проверки изображений в случае необходимости обучения новой модели.
+
+\subsection{Анализ последовательностей действий пользователей системы}
+
+\tab
+Последовательности действий пользователей системы были проанализированы при помощи web интерфейса клиентской части системы и её сервисного сайта.
+В таблице 7 указано количество действий пользователя для выполнения заявленных сценариев использования.
+% \tableseven
+
+\tab
+В результате анализа был сделан вывод о том, что количество действий, которые необходимо произвести пользователю для выполнения сценария использования в большинстве случаев близко к количеству данных, которые он загружает в систему в этом сценарии.
+В результате анализа была оптимизирована форма отправки пользователем отчёта:
+\begin{itemize}
+	\item Добавлено автоматическое заполнение поля \textquote{\en{Address}} при помощи данных, полученных из сервиса \la{Nominatim}.
+	\item Добавлена кнопка автоматической установки маркера в текущую позицию пользователя.
+	\item Поле для ввода даты и времени наблюдения растения заменено на виджеты.
+\end{itemize}
+Также была оптимизирована форма изменения данных профиля пользователя:
+\begin{itemize}
+	\item Поля, представленные в виде диалоговых окон, были заменены на поля ввода с автоматически открывающимися диалоговыми окнами.
+\end{itemize}
+
+\tab
+В результате анализа последовательности действий пользователей системы были сокращены по возможности.
