--- a/report/definitions.tex
+++ b/report/definitions.tex
@@ -2,7 +2,7 @@
 
 \newcont{Определения}
 
-\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+\begin{itemize}
 	\item \defineterm{report}{Отчёт} -- вся необходимая информация, касающаяся наблюдения волонтёром очага распространения потенциально опасного для человека растения.
 	\item \defineterm{processing}{Обработка данных} -- процесс сортировки отчётов и/или поиска по одному или нескольким признакам.
 	\item \defineterm{users}{Пользователи системы} -- волонтёры, предоставляющие системе данные о нахождении очагов распространения потенциально опасных для человека растений.
@@ -10,5 +10,3 @@
 	\item \defineterm{specialists}{Специалисты системы} -- экологи, исследующие и наблюдающие за опасными для человека видами растений.
 	\item \defineterm{servicesite}{Сервисный сайт} -- сайт для изменения данных, присланных системе, доступный для администраторов и специалистов системы.
 \end{itemize}
-
-\clearpage
