--- a/report/ecology.tex
+++ b/report/ecology.tex
@@ -8,24 +8,24 @@
 Данная работа посвящена созданию системы, предназначенной для защиты окружающей среды от потенциально опасных растений.
 Проблема их распространения сейчас особенно актуальна в том числе из-за изменений климата\cite{poisonous-ivy} и увеличения количества используемых человеком территорий.
 
-\nwln
+\tab
 Одним из самых распространённых и опасных подобных растений в России является Борщевик Сосновского\cite{heracleum-desc}.
 Это растение инвазивное, т. е. интродуцированное в новый ареал обитания человеком и представляющее опасность для биологического многообразия в нем.
 Такие его качества как высокая продолжительность жизни (8 лет), глубокое залегание корней (до 2 метров), а также повышенная репродуктивную способность (одно растение может давать до 20 тысяч семян) значительно затрудняют борьбу с ним.
 Также борщевик устойчив к неблагоприятным климатическим условиям, не имеет естественных болезней или вредителей.
 
-\nwln
-Борщевик не только активно подавляет рост других видов растений, но и является ядовитым для человека, его ткани содержат вещества, которые, при попадании на кожу, вызывают болезненные, долго незаживающие ожогов.
+\tab
+Борщевик не только активно подавляет рост других видов растений, но и является ядовитым для человека, его ткани содержат вещества, которые, при попадании на кожу, вызывают болезненные, долго незаживающие ожогов, которые проявляются при воздействии на них солнечного ультрафиолета.
 
-\nwln
-Каждый год, территория, поросшая борщевиком увеличивается на 10\%\cite{kommersant, er-initiative}, при этом в отдельные года скорость распространения увеличивалась до 160\%\cite{business-online} в год.
+\tab
+Каждый год территория, поросшая борщевиком увеличивается на 10\%\cite{kommersant, er-initiative}, при этом в отдельные года скорость распространения увеличивалась до 160\%\cite{business-online} в год.
 В московской области на борьбу с борщевиком ежегодно выделяется 300 миллионов рублей\cite{mos-expenses}, а в ленинградской - более 24.6\cite{len-expenses}.
 
-\nwln
+\tab
 Для собственников земельных участков предусмотрена обязанность проведения профилактических мероприятий во избежание произрастания борщевика Сосновского и других сорняков\cite{rural-measures}.
 В качестве профилактических мер Россельхознадзором\cite{countryside-measures} предложены следующие:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
-	\item Выкапывание растения и его корней до глубины в 20 сми сжигание их, подходит для борьбы с единичными всходами.
+\begin{enumerate}
+	\item Выкапывание растения и его корней до глубины в 20 см. и сжигание их, подходит для борьбы с единичными всходами.
 	\item Механическая вспашка при помощи специальной техники с одновременным вспахиванием и подрезанием корней, подходит для борьбы с большими популяциями.
 	\item Сжигание заросли борщевика целиком после обработки горючей жидкостью, подходит для применения в местах без повышенной опасности распространения огня.
 	\item Вытеснение быстро разрастающимися культурами, например, кострецами, овсяницей красной или мятликом луговым.
@@ -33,29 +33,29 @@
 	\item Гербицидная обработка участка от борщевика с применением гербицидов сплошного действия на основе.
 \end{enumerate}
 
-\nwln
-Несоблюдение изложенных выше мер влечёт наложение административного штрафа\cite{rural-fine} в размере:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+\tab
+Несоблюдение изложенных выше мер влечёт за собой наложение административного штрафа\cite{rural-fine} в размере:
+\begin{itemize}
 	\item От двадцати до пятидесяти тысяч рублей для граждан;
 	\item От пятидесяти до ста тысяч рублей для административных лиц;
 	\item От четырёхсот до семисот тысяч рублей для юридических лиц.
-\end{enumerate}
+\end{itemize}
 
-\nwln
+\tab
 При обнаружении борщевика Сосновского на участке земли сельскохозяйственного назначения\cite{rural-law} граждане вправе обратиться в территориальное управление Россельхознадзора для принятия мер в установленном законодательством порядке.
 
-\nwln
+\tab
 Также предприятия, сфера деятельности которых распространяется на обширные участки необработанных территорий обязаны создавать программы сохранения биологического разнообразия сельскохозяйственных или других мероприятий\cite{nature-law}.
 
-\nwln
+\tab
 Благодаря возможности описанного в данной работе программного обеспечения предоставлять возможность отслеживания распространения потенциально опасных растений, а также каталогизации и хранения полученной информации, оно может быть использовано как на уровне города, области или региона профессиональными экологами или представителями государственных органов, так и в рамках программы сохранения биологического разнообразия на отдельном предприятии.
-Для этого серверная часть ПО снабжена упрощённой системой установки (см. п. 3.8), позволяющей развернуть её при помощи нескольких консольных команд и снижающей список ее зависимостей до \en{bash}, \en{Docker} и \en{docker-compose}, а клиентская часть поддерживает сборку для различных платформ, устройств и серверов.
+Для этого серверная часть ПО снабжена упрощённой системой установки (см. п. \ref{subsec:installing-and-launching}), позволяющей развернуть её при помощи нескольких консольных команд и снижающей список ее зависимостей до \en{bash}, \en{Docker} и \en{docker-compose}, а клиентская часть поддерживает сборку для различных платформ, устройств и серверов.
 
-\nwln
+\tab
 В рамках работы с предлагаемым ПО на предприятиях возможно уменьшение времени реагирования руководства на сообщения сотрудников о произрастающих на территории сорных растениях и упрощение обработки очагов их произрастания и проведения профилактических мер.
 При использовании его представителями государственных органов может быть повышена точность проводимых мероприятий, связанных с защитой биоразнообразия окружающей среды, налажена связь с желающими сотрудничать гражданами, а также увеличена продуктивность финансирования инициатив по устранению загрязнения территории растениями вредителями.
 В основном же разработанное ПО рассчитано на потребителей в лице профессиональных учёных экологов и специалистов по охране окружающей среды
 Для них оно предоставит возможности не только отслеживания очагов распространения потенциально опасных для человека растений и реагирования на их появление, но и их каталогизации, сортировки и визуализации ареалов произрастания разных видов таких растений в виде маркеров на карте мира.
 
-\nwln
+\tab
 Кроме всего прочего, описанное ПО имеет возможность экспорта и импорта данных в едином формате, которую можно использовать при параллельной работе нескольких серверов программы для обмена и синхронизации данных между ними (например, данные, собранные системой, работающей на территории предприятия могут быть переданы и сохранены в системе, работающей на уровне области).
